fix overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,6 +147,7 @@ span.highlight {
 
 .container {
   margin: 0 auto;
+  max-width: 900px;
   height: auto;
   padding: 10px;
   position: relative;
